[package]
name = "battleships"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
field = {path = "/home/kirby/Desktop/Coding/Rust/field"}
anyhow = "1.0.89"
colored = "2.1.0"
itertools = "0.13.0"
strum = "0.26.3"
strum_macros = "0.26.4"
